--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "content-service",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "description": "This service used to perform CRUD operations on content",
   "main": "app.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "lint-staged": {
     "*.js": "eslint"
   },
-  "author": "sunbird",
+  "author": "forwater",
   "license": "ISC",
   "dependencies": {
     "async": "^2.4.0",
